popravljena imena slik

--- a/zzrs_latex/poglavje01.tex
+++ b/zzrs_latex/poglavje01.tex
@@ -36,7 +36,7 @@ V programskem jeziku C smo napisali generator datotek, ki ustvari datoteko "zelj
 
 \begin{figure} [!h]
   \centering
-    \includegraphics[width=0.75\textwidth]{ZZRS-sort_files.pdf}
+    \includegraphics[width=0.75\textwidth]{8_ZZRS-sort_files.pdf}
   \caption{Slika prikazuje primer datoteke s katero operirata stre"znik in odjemalec.}
   \label{8_files}
 \end{figure}
@@ -146,7 +146,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
 	Rezultati meritve so vidni na sliki \ref{8_graf_1_rez}.
 	\begin{figure}[!htb]
   	\centering
-  	  \includegraphics[width=1.0\textwidth]{test1_st_odjemalcev.jpg}
+  	  \includegraphics[width=1.0\textwidth]{8_test1_st_odjemalcev.jpg}
   	\caption{Graf povpre"cnega "casa "cakanja odjemalcev v odvisnosti od "stevila odjemalcev.}
   	\label{8_graf_1_rez}
 	\end{figure}
@@ -186,7 +186,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
 
     \begin{table}[!h]
       \centering
-        \includegraphics[width=1.0\textwidth]{test2_velikost_datotek.jpg}
+        \includegraphics[width=1.0\textwidth]{8_test2_velikost_datotek.jpg}
       \caption{Graf povpre"cnega "casa "cakanja odjemalcev v odvisnosti od velikosti datotek.}
       \label{8_graf_2_rez}
     \end{table}
@@ -208,7 +208,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
  	\item \textbf{Rezultati meritve: }  \\
 		\begin{figure}[!htb]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test3_resursi.pdf}
+  		  \includegraphics[width=1.0\textwidth]{8_test3_resursi.pdf}
   		\caption{Graf zasedenosti resursov med izvajanem testovs.}
   		\label{8_graf_zasedenost_resursov}
 		\end{figure}
@@ -230,14 +230,14 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
  	\item \textbf{Rezultati meritve: }  \\
 		\begin{figure}[h]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test4_lokalnost_20.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test4_lokalnost_20.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev v odvisnosti od lokacije na primeru datoteke z 20,000 "stevili}
   		\label{8_graf_lokalnost_20}
 		\end{figure}
 
 		\begin{figure}[h]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test4_lokalnost_50.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test4_lokalnost_50.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev v odvisnosti od lokacije na primeru datoteke z 50,000 "stevili}
   		\label{8_graf_lokalnost_50}
 		\end{figure}
@@ -263,14 +263,14 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
 
 		\begin{figure}[h]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test5_racunska_moc_20.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test5_racunska_moc_20.jpg}
   		\caption{Graf povpre"cnega "casa "cakanja odjemalcev treh razli"cnih stre"znikov na primeru datotek z 20,000 "stevili.}
   		\label{8_graf_racunska_moc_20}
 		\end{figure}
 
 	\begin{figure}[h]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test5_racunska_moc_50.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test5_racunska_moc_50.jpg}
   		\caption{Graf povpre"cnega "casa "cakanja odjemalcev treh razli"cnih stre"znikov na primeru datotek s 50,000 "stevili.}
   		\label{8_graf_racunska_moc_50}
 		\end{figure}
@@ -290,7 +290,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
  	\item \textbf{Rezultati meritve: }  \\
 		\begin{figure}[h]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test6_24h.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test6_24h.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev v 24 urah }
   		\label{8_graf_racunska_moc_50}
 		\end{figure}
@@ -312,7 +312,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
 		Na sliki \ref{8_graf_algorithms} lahko vidimo gafi"cno predstavljene rezultate meritve.
     		\begin{figure}[h]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test_frankfurt_algorithms.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test_frankfurt_algorithms.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev pri razli"cnih algoritmih }
   		\label{8_graf_algorithms}
 		\end{figure}
@@ -334,7 +334,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
      	\item \textbf{Rezultati meritve: }  \\
     		\begin{figure}[h!]
   		\centering
-  		  \includegraphics[width=1.0\textwidth]{test_zlom_sistema.jpg}
+  		  \includegraphics[width=1.0\textwidth]{8_test_zlom_sistema.jpg}
   		\caption{Graf povpre"cnega "casa cakanja odjemalcev pri uspe"snem poizkusu zloma sistema. }
   		\label{8_graf_zlom_sistema}
 		\end{figure}
