--- a/zzrs_latex/mro.bib
+++ b/zzrs_latex/mro.bib
@@ -37,3 +37,8 @@
 	title = {Performance analysis of Cloud Computing Centers},
 	howpublished = {\url{http://www.scs.ryerson.ca/~jmisic/papers/qshine2010hamzeh.pdf}}
 }
+
+@misc{8_performance_testing,
+	title = {Performance testing of cloud applications},
+	howpublished = {\url{http://www.remics.eu/system/files/REMICS_D6.6.lowres.pdf}}
+}
