--- a/zzrs_latex/poglavje01.tex
+++ b/zzrs_latex/poglavje01.tex
@@ -361,7 +361,7 @@ S testi smo hoteli ugotoviti vplive "stevila odjemalcev, velikosti datotek, loka
 Merili smo predvsem "case potrebne za po"siljanje in sortiranje datotek ter zasedenost resursov na stre"zniku.\\
 Kot glavno ozko grlo stre"znika se je pri"cakovano izkazal CPU, saj mora pri sortiranju opraviti zelo veliko operacij primerjanja. Maksimalno zasedenost CPU-ja laho hitro dose"zemo z ve"canjem "stevila odjemalcev in velikosti datotek.\\
 Za metrike smo se odlo"cili na podlagi "clanka \cite{8_ibm_metrics}. V veliko pomo"c pa so nam bile tudi ugotovitve iz "clankov \cite{8_performance_challenges}, \cite{8_performance_analysis} in \cite{8_performance_evaluation}.
-Nekatere podobne meritve smo na"sli v "clanku TODO:Referenca, kjer so ravno tako kot mi merili zmogljivost programov v oblaku.
+Nekatere podobne meritve smo na"sli v "clanku \cite{8_performance_testing}, kjer so ravno tako kot mi merili zmogljivost programov v oblaku.
 Na podlagi eksperimentov smo ugotovili, da je izbira algoritma zelo pomembna in bistveno vpliva na "cas obdelave. Prav tako je klju"cna obremenjenost stre"znika s "stevilom klientov.
 Kljub vsemu, pa stre"znik s tako nizkimi zmogljivostmi ne pride v po"stev za prakti"co uporabo re"sevanja ra"cunskih problemov namesto kon"cnih delovnih to"ck (osebnih ra"cunalnikov). Ob tem pa je potrebno poudariti, da na trgu obstajajo tudi precej
 zmogljivej"se re"sitve, ki omogo"cajo bistveno ve"cjo ra"cunsko mo"c. Vedno hitrej"si stre"zniki in pove"cevanje povpre"cne hitrosti internetne povezave, pa bo slej ko prej pripeljalo do to"cke, ko bomo iz kon"cnih to"ck ra"cunsko zahtevne probleme v obdelavo po"siljali na stre"znik. Na"se naprave (kon"cne to"cke), pa bodo skrbele le za interakcijo s stre"znikom in prikaz rezultatov. 
